--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,14 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="E:/Maven_Repo/com/oracle/ojdbc7/12.1.0.1.0/ojdbc7-12.1.0.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jinwx/.m2/repository/org/apache/xmlbeans/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jinwx/.m2/repository/org/apache/poi-3.17/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jinwx/.m2/repository/org/apache/poi-3.17/poi-examples-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jinwx/.m2/repository/org/apache/poi-3.17/poi-excelant-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jinwx/.m2/repository/org/apache/poi-3.17/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jinwx/.m2/repository/org/apache/poi-3.17/poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jinwx/.m2/repository/org/apache/poi-3.17/poi-scratchpad-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jinwx/.m2/repository/org/apache/commons/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jinwx/.m2/repository/org/apache/commons/commons-lang3-3.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
