update the InfoSummary

--- a/config/applilcation.properties
+++ b/config/applilcation.properties
@@ -1,2 +1,4 @@
-remotemetercount=SELECT * FROM (SELECT * FROM RM_CEDIAN WHERE OBJECTID IN (SELECT CEDIANID FROM HM_CEDIAN_AREA_ASSO WHERE MAID IN (SELECT METEREDAREAID FROM HM_METEREDAREA WHERE MATYPE IN ('3','4')))AND OBJECTID  IN (SELECT CEDIANID FROM RM_CEDIAN_DEVICE_ASSO WHERE STOPTIME IS  NULL) UNION SELECT * FROM RM_CEDIAN WHERE OBJECTID IN (SELECT CEDIANID FROM HM_CEDIAN_AREA_ASSO WHERE MAID IN (SELECT METEREDAREAID FROM HM_METEREDAREA WHERE MATYPE = '10' ))AND OBJECTID IN (SELECT CEDIANID FROM RM_CEDIAN_DEVICE_ASSO WHERE STOPTIME IS  NULL))
-BL_KZFL_DEF_COUNT=SELECT COUNT(*) FROM BL_KZFL_DEF
+datasource.url=jdbc:oracle:thin:@192.168.0.31:1521/wmpdb
+datasource.username=wm2
+datasource.password=wm2
+datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
