--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//config/applilcation.properties=UTF-8
 encoding//config/url.properties=UTF-8
+encoding/<project>=UTF-8
